# twitch-realtime-project

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
Docker/Spark/: requirements.txt
docker/grafana/: Dockerfile
docker/grafana/provisioning/datasources/: clickhouse.yml
docs/: glassflow-setup.md
src/: .env  .env.example
src/dashboard/: twitch_realtime_dashboard.json
src/database/: game_streams_enriched.sql
src/producer/: lol_streams_producer.py  streams_producer.py  twitch_api.py
src/schemas/: lol_streams_avro_schema.json
