[project]
name = "twitch-realtime-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "authlib>=1.5.2",
    "cachetools>=5.5.2",
    "confluent-kafka>=2.10.0",
    "dotenv>=0.9.9",
    "fastavro>=1.11.1",
    "httpx>=0.28.1",
    "pyspark>=3.5.5",
    "twitchapi>=4.4.0",
]
